Bug 114603 - do not highlights text field Range with not correct range in dialogue "Conditional formatting for"
Summary: do not highlights text field Range with not correct range in dialogue "Condit...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All Linux (All)
: medium normal
Assignee: tagezi
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-20 20:48 UTC by Roman Kuznetsov
Modified: 2017-12-21 13:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2017-12-20 20:48:33 UTC
Description:
 do not highlights text field Range with not correct range in dialogue "Conditional formatting for", that opens from dialogue "Manage Conditional Formatting"

Steps to Reproduce:
1. Create any conditional formatting
2. Select menu Format->Conditional formatting->Manage
3. Select your conditional formatting
4. Push button "Edit"
5. In dialogue "Conditional formatting for _your range or cell_" in field "Range:" change range to "A1:A3; B1". It is not correct range, there is space after ";"! In Windows this field with not correct range is becoming RED.
6. In Linux (Ubuntu 17.04) this field not highlight and user don't see, that he entered wrong range. After save wrong range conditional formatting disappear (see bug #114545)!

Actual Results:  
field for type of range don't highlight for wrong range

Expected Results:
field for type of range highlight red color for wrong range


Reproducible: Always


User Profile Reset: No



Additional Info:
this bug ONLY FOR LINUX
In Windows highlighting is working


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Commit Notification 2017-12-21 13:53:47 UTC
tagezi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6db8e752c6075d69d5ff475e15a12317ac9aa4e2

tdf#114603 highlights of EditField if a range is not valid

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.