tdf#114603 highlights of EditField if a range is not valid

The background EditField is highlighted light-red
And fond becomes white

Change-Id: Ie0576175aa51efe9a1dade1581af9898f66e92e5